# SN2N

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/denoising3D/data/sn2n_demo_channels_full/: sn2n_demo_prepare_summary.json
scripts/: Script_SN2N_datagen_2D.py  Script_SN2N_datagen_3D.py  Script_SN2N_inference_2D.py  Script_SN2N_inference_3D.py  Script_SN2N_proprecess.py  Script_SN2N_trainer_2D.py  Script_SN2N_trainer_3D.py  Script_SN2Nexecute_2D.py  Script_SN2Nexecute_3D.py  __init__.py  demo.py
src/SN2N/: SN2Nexecute.py  datagen.py  get_options.py  inference.py  inference_32bit.py  models.py  trainer.py  utils.py
src/SN2N.egg-info/: PKG-INFO
